--- a/MyCode/organizer/templates/organizer/tag_list.html
+++ b/MyCode/organizer/templates/organizer/tag_list.html
@@ -10,7 +10,10 @@
 <h2>Tag List</h2>
 <ul>
     {% for tag in tag_list %}
-        <li><a href="">{{ tag.name|title }}</a></li>
+        <li>
+            <a href="{% url 'organizer_tag_detail' tag.slug %}">
+                {{ tag.name|title }}</a>
+        </li>
     {% empty %}
         <li><em>There are currently no Tags available.</em></li>
     {% endfor %}
