--- a/MyCode/blog/templates/blog/post_list.html
+++ b/MyCode/blog/templates/blog/post_list.html
@@ -10,7 +10,8 @@
 <article>
     <header>
         <h2>
-            <a href="">{{ post.title|title }}</a>
+            <a href="{% url 'blog_post_detail' post.pub_date.year post.pub_date.month post.slug %}">
+                {{ post.title|title }}</a>
         </h2>
         <p>
             Written on:
@@ -20,7 +21,10 @@
         </p>
     </header>
     <p>{{ post.text|truncatewords:20 }}</p>
-    <p><a href="">Read more&hellip;</a></p>
+    <p>
+        <a href="{% url 'blog_post_detail' year=post.pub_date.year month=post.pub_date.month slug=post.slug %}">
+            Read more&hellip;</a>
+    </p>
 </article>
 
 {% empty %}
