--- a/MyCode/organizer/templates/organizer/tag_list.html
+++ b/MyCode/organizer/templates/organizer/tag_list.html
@@ -1,22 +1,23 @@
 {% extends parent_template|default:"organizer/base_organizer.html" %}
 
 {% block title %}
-{{ block.title }} - Tag List
+{{ block.super }} - Tag List
 {% endblock %}
 
-
 {% block content %}
-
-<h2>Tag List</h2>
-<ul>
+  <h2>Tag List</h2>
+    <div>
+      <a href="{% url 'organizer_tag_create' %}">
+        Create New Tag</a>
+    </div>
+  <ul>
     {% for tag in tag_list %}
-        <li>
-            <a href="{{ tag.get_absolute_url }}">
-                {{ tag.name|title }}</a>
-        </li>
+      <li>
+        <a href="{{ tag.get_absolute_url }}">
+          {{ tag.name|title }}</a>
+      </li>
     {% empty %}
-        <li><em>There are currently no Tags available.</em></li>
+      <li><em>There are currently no Tags available.</em></li>
     {% endfor %}
-</ul>
-
+  </ul>
 {% endblock %}
