--- a/MyCode/organizer/templates/organizer/startup_detail.html
+++ b/MyCode/organizer/templates/organizer/startup_detail.html
@@ -8,6 +8,11 @@
 <article>
 
   <h2>{{ startup.name }}</h2>
+    <ul>
+        <li>
+          <a href="{{ startup.get_update_url }}">
+            Edit Startup</a></li>
+    </ul>
   <dl>
     <dt>Date Founded</dt>
       <dd>{{ startup.founded_date|date:"F jS, Y" }}</dd>
@@ -30,11 +35,19 @@
       {% if startup.newslink_set.all %}
           <section>
             <h3>Recent News</h3>
+              <p>
+                <a href="{% url 'organizer_newslink_create' %}">
+                  Add Article</a></p>
             <ul>
               {% for newslink in startup.newslink_set.all %}
                 <li>
                   <a href="{{ newslink.link }}">
                     {{ newslink.title|title }}</a>
+                    <ul>
+                        <li>
+                          <a href="{{ newslink.get_update_url }}">
+                            Edit Link</a></li>
+                    </ul>
                 </li>
               {% endfor %}
             </ul>
