--- a/MyCode/templates/base.html
+++ b/MyCode/templates/base.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="utf-8">
-        <title>
-            {% block title %}
-                Startup Organizer
-            {% endblock %}
-        </title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initialscale=1">
-        <!--[if IE]>
-        <script
-            src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
-        </script><![endif]-->
-</head>
+    <title>
+      {% block title %}
+        Startup Organizer
+      {% endblock %}
+    </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--[if IE]><script
+      src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
+    </script><![endif]-->
+  </head>
 
-<body>
+  <body>
+
     <div><!-- container -->
-        <header>
-            <h1>Startup Organizer</h1>
-        </header>
-        <nav>
+      <header>
+          <h1>Startup Organizer</h1>
+      </header>
+      <nav>
         <ul>
           <li>
             <a href="{% url 'blog_post_list' %}">
@@ -33,22 +33,27 @@
             <a href="{% url 'organizer_tag_list' %}">
               Tags</a></li>
         </ul>
-        </nav>
-        <main>
-            {% block content %}
-                This is default content!
-            {% endblock %}
-        </main>
+      </nav>
+      <main>
+        {% block content %}
+          This is default content!
+        {% endblock %}
+      </main>
     </div><!-- container -->
 
     <footer>
-        <p>
-            &copy; 2015<a href="https://AndrewsForge.com/">Andrew Pinkham</a>
-        </p>
-        <p>
-        Created for<a href="https://Django-Unleashed.com/">Django Unleashed</a>
-        </p>
+      <p>
+        &copy; 2015
+        <a href="https://AndrewsForge.com/">
+          Andrew Pinkham</a>
+      </p>
+      <p>
+        Created for
+        <a href="https://Django-Unleashed.com/">
+          Django Unleashed</a>
+      </p>
     </footer>
-</body>
+
+  </body>
 
 </html>
