--- a/MyCode/organizer/templates/organizer/startup_detail.html
+++ b/MyCode/organizer/templates/organizer/startup_detail.html
@@ -47,6 +47,9 @@
                         <li>
                           <a href="{{ newslink.get_update_url }}">
                             Edit Link</a></li>
+                        <li>
+                          <a href="{{ newslink.get_delete_url }}">
+                            Delete Link</a></li>
                     </ul>
                 </li>
               {% endfor %}
