--- a/MyCode/blog/templates/blog/post_form_update.html
+++ b/MyCode/blog/templates/blog/post_form_update.html
@@ -1,21 +1,21 @@
-{% extends parent_template|default:"organizer/base_organizer.html" %}
+{% extends parent_template|default:"blog/base_blog.html" %}
 
 {% block title %}
-{{ block.super }} - Link News Article to Startup
+{{ block.super }} - Update Blog Post
 {% endblock %}
 
 {% block content %}
   <div class="row">
     <div class="offset-by-two eight columns">
       <form
-          action="{% url 'organizer_newslink_create' %}"
+          action="{{ post.get_update_url }}"
           method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button
             class="button-primary"
             type="submit">
-          Link Article</button>
+          Update Blog Post</button>
       </form>
     </div>
   </div>
