--- a/MyCode/organizer/templates/organizer/startup_confirm_delete.html
+++ b/MyCode/organizer/templates/organizer/startup_confirm_delete.html
@@ -1,25 +1,25 @@
 {% extends parent_template|default:"organizer/base_organizer.html" %}
 
 {% block title %}
-{{ block.super }} - Delete Tag
+{{ block.super }} - Delete Startup
 {% endblock %}
 
 {% block content %}
   <div class="row">
     <div class="offset-by-two eight columns">
       <form
-          action="{{ tag.get_delete_url }}"
+          action="{{ startup.get_delete_url }}"
           method="post">
         {% csrf_token %}
         <p>
           Are you sure you want to delete
-          tag {{ tag.name }}?
+          startup {{ startup.name }}?
         </p>
         <a
-            href="{{ tag.get_absolute_url }}"
+            href="{{ startup.get_absolute_url }}"
             class="button button-primary">
           Cancel</a>
-        <button type="submit">Delete Tag</button>
+        <button type="submit">Delete Startup</button>
       </form>
     </div>
   </div>
