--- a/MyCode/templates/base.html
+++ b/MyCode/templates/base.html
@@ -1,6 +1,4 @@
 {% load staticfiles %}
-{% load flatpages %}
-{% get_flatpages as flatpages %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,6 +26,19 @@
   <body>
 
     <div class="container">
+      <div class="status row">
+        <div class="offset-by-eight four columns">
+          <ul class="inline">
+            {% if user.is_authenticated %}
+              <li><a href="{% url 'dj-auth:logout' %}">
+                Log Out</a></li>
+            {% else %}
+              <li><a href="{% url 'dj-auth:login' %}">
+                Log In</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
       <header class="row">
         <div class="offset-by-one ten columns">
           <h1 class="logo">Startup Organizer</h1>
@@ -35,6 +46,9 @@
       </header>
       <nav>
         <ul>
+          <li>
+            <a href="{% url 'about_site' %}">
+              About</a></li>
           <li>
             <a href="{% url 'blog_post_list' %}">
               Blog</a></li>
@@ -47,11 +61,6 @@
           <li>
             <a href="{% url 'contact' %}">
               Contact</a></li>
-          {% for page in flatpages %}
-            <li>
-              <a href="{{ page.get_absolute_url }}">
-                {{ page.title }}</a></li>
-          {% endfor %}
         </ul>
       </nav>
       {% if messages %}
