--- a/MyCode/templates/base.html
+++ b/MyCode/templates/base.html
@@ -30,9 +30,13 @@
         <div class="offset-by-eight four columns">
           <ul class="inline">
             {% if user.is_authenticated %}
+              <li><a href="{% url 'dj-auth:profile' %}">
+                View Profile</a></li>
               <li><a href="{% url 'dj-auth:logout' %}?next={{ request.path }}">
                 Log Out</a></li>
             {% else %}
+              <li><a href="{% url 'dj-auth:create' %}">
+                Register</a></li>
               <li><a href="{% url 'dj-auth:login' %}?next={{ request.path }}">
                 Log In</a></li>
             {% endif %}
