--- a/MyCode/organizer/templates/organizer/startup_detail.html
+++ b/MyCode/organizer/templates/organizer/startup_detail.html
@@ -35,12 +35,14 @@
     <dt>Contact</dt>
       <dd>{{ startup.contact }}</dd>
 
-      <dt>Tag{{ startup.tags.count|pluralize }}</dt>
-        {% for tag in startup.tags.all %}
+    {% with tag_list=startup.tags.all %}
+      <dt>Tag{{ tag_list|pluralize }}</dt>
+        {% for tag in tag_list %}
           <dd><a href="{{ tag.get_absolute_url }}">
             {{ tag.name|title }}
           </a></dd>
         {% endfor %}
+    {% endwith %}
 
   </dl>
 
@@ -112,15 +114,17 @@
           <section class="meta offset-by-two two-thirds column">
         {% endif %}
         {% if perms.blog.view_future_post and startup.blog_posts.all %}
-            <h3>Blog Post{{ startup.blog_posts.all|pluralize }}</h3>
+          {% with post_list=startup.blog_posts.all %}
+            <h3>Blog Post{{ post_list|pluralize }}</h3>
             <ul>
-              {% for post in startup.blog_posts.all %}
+              {% for post in post_list %}
                 <li>
                   <a href="{{ post.get_absolute_url }}">
                     {{ post.title|title }}</a>
                 </li>
               {% endfor %}
             </ul>
+          {% endwith %}
         {% elif startup.published_posts|length > 0 %}
             <h3>Blog Post{{ startup.published_posts|pluralize }}</h3>
             <ul>
