--- a/MyCode/blog/templates/blog/post_form.html
+++ b/MyCode/blog/templates/blog/post_form.html
@@ -1,22 +1,11 @@
 {% extends parent_template|default:"blog/base_blog.html" %}
+{% load display_form %}
 
 {% block title %}
 {{ block.super }} - Create Blog Post
 {% endblock %}
 
 {% block content %}
-  <div class="row">
-    <div class="offset-by-two eight columns">
-      <form
-          action="{% url 'blog_post_create' %}"
-          method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button
-            class="button-primary"
-            type="submit">
-          Create Blog Post</button>
-      </form>
-    </div>
-  </div>
+  {% url 'blog_post_create' as form_url %}
+  {% form form_url 'Create Blog Post' %}
 {% endblock %}
