--- a/MyCode/organizer/templates/organizer/base_organizer.html
+++ b/MyCode/organizer/templates/organizer/base_organizer.html
@@ -1,4 +1,5 @@
 {% extends parent_template|default:"base.html" %}
+{% load blog_latest %}
 
 {% block content %}
   <div class="row">
@@ -9,6 +10,16 @@
     </section>
     <section class="desktop four columns">
       {% block create_button %}{% endblock %}
+      {% get_latest_posts 5 as custom_post_list %}
+      <section class="latest_posts">
+        <h4>Latest Posts</h4>
+        <ul>
+          {% for latest_post in custom_post_list %}
+            <li><a href="{{ latest_post.get_absolute_url }}">
+              {{ latest_post.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </section>
     </section>
   </div>
   {% if is_paginated %}
