--- a/MyCode/organizer/templates/organizer/tag_detail.html
+++ b/MyCode/organizer/templates/organizer/tag_detail.html
@@ -1,4 +1,5 @@
 {% extends parent_template|default:"organizer/base_organizer.html" %}
+{% load partial_post_list %}
 
 {% block title %}
 {{ block.super }} - {{ tag.name|title }}
@@ -41,37 +42,15 @@
       </ul>
     </section>
   {% endif %}
-  {% if perms.blog.view_future_post %}
-      {% if tag.blog_posts.all %}
-        <section>
-          <h3>Blog Post{{ tag.blog_posts.count|pluralize }}</h3>
-          <ul>
-            {% for post in tag.blog_posts.all %}
-              <li><a href="{{ post.get_absolute_url }}">
-                {{ post.title|title }}
-              </a></li>
-            {% endfor %}
-          </ul>
-        </section>
-      {% endif %}
-      {% if not tag.startup_set.all and not tag.blog_posts.all %}
+
+  {% format_post_list tag %}
+
+  {% if not perms.blog.view_future_post or not tag.blog_posts.all %}
+    {% if not tag.published_posts|length > 0 %}
+      {% if not tag.startup_set.all %}
         <p>This tag is not related to any content.</p>
       {% endif %}
-  {% else %}
-      {% if tag.published_posts|length > 0 %}
-        <section>
-          <h3>Blog Post{{ tag.published_posts|pluralize }}</h3>
-          <ul>
-            {% for post in tag.published_posts %}
-              <li><a href="{{ post.get_absolute_url }}">
-                {{ post.title|title }}
-              </a></li>
-            {% endfor %}
-          </ul>
-        </section>
-      {% endif %}
-      {% if not tag.startup_set.all and not tag.published_posts %}
-        <p>This tag is not related to any content.</p>
-      {% endif %}
+    {% endif %}
   {% endif %}
+
 {% endblock %}
