--- a/MyCode/templates/base.html
+++ b/MyCode/templates/base.html
@@ -107,6 +107,10 @@
       </p>
       <ul>
         <li>
+          <a href="{% url 'sitemap' %}">
+            Sitemap</a>
+        </li>
+        <li>
           <a
               href="{% url 'blog_rss_feed' %}"
               class="feed">
